dev/tests/cases/neg/46_bridge_container.tv
df main() -> void {
    set xs: list<bridge<i64>> = list_new();
    echo!(len(xs));
}
